playbooks/manifests/prometheus-pushgateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway:v1.5.2
          ports:
            - containerPort: 9091
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
